--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
     "/js/confirmDelete.js": "/js/confirmDelete.js",
-    "/js/formCreate.js": "/js/formCreate.js"
+    "/js/formCreate.js": "/js/formCreate.js",
+    "/js/front.js": "/js/front.js",
+    "/css/app.css": "/css/app.css",
+    "/js/route.js": "/js/route.js"
 }
